<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Source: https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.3</version>
        <relativePath/>
    </parent>

    <groupId>de.fhdw.vendix</groupId>
    <artifactId>vendix-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>vendix-parent</name>
    <description>vendix-parent</description>

    <modules>
        <module>commons</module>
<!--        <module>pos</module>-->
        <module>store</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <!-- Module Versions -->
        <commons.version>1.0.0</commons.version>
        <store.version>1.0.0</store.version>
        <!-- Dependency Versions -->
        <vaadin.version>25.0.5</vaadin.version>
        <swagger.version>2.2.42</swagger.version>
        <pdfbox.version>3.0.6</pdfbox.version>
        <plaguv-amqp.version>1.2.0</plaguv-amqp.version>
        <nimbus.version>10.7</nimbus.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <error-handling.version>5.1.0</error-handling.version>
        <!-- Plugin Versions -->
        <error-prone.version>2.47.0</error-prone.version>
        <error-prone-support.version>0.28.0</error-prone-support.version>
        <nullaway.version>0.13.1</nullaway.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Source: https://mvnrepository.com/artifact/com.vaadin/vaadin-bom -->
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-bom</artifactId>
                <version>${vaadin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Source: https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations -->
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <!-- Source: https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox</artifactId>
                <version>${pdfbox.version}</version>
            </dependency>
            <!-- Source: https://mvnrepository.com/artifact/io.github.plaguv/plaguv-amqp-spring-boot-starter -->
            <dependency>
                <groupId>io.github.plaguv</groupId>
                <artifactId>plaguv-amqp-spring-boot-starter</artifactId>
                <version>${plaguv-amqp.version}</version>
            </dependency>
            <!-- Source: https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt -->
            <dependency>
                <groupId>com.nimbusds</groupId>
                <artifactId>nimbus-jose-jwt</artifactId>
                <version>${nimbus.version}</version>
            </dependency>
            <!-- Source: https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <!-- Source: https://mvnrepository.com/artifact/io.github.wimdeblauwe/error-handling-spring-boot-starter -->
            <dependency>
                <groupId>io.github.wimdeblauwe</groupId>
                <artifactId>error-handling-spring-boot-starter</artifactId>
                <version>${error-handling.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Source: https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <excludes>**pos/*.java</excludes>
                        <release>${java.version}</release>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <compilerArgs>
                            <arg>-XDcompilePolicy=simple</arg>
                            <arg>--should-stop=ifError=FLOW</arg>
                            <arg>-XDaddTypeAnnotationsToSymbol=true</arg>
                            <arg> <!-- Arguments have to be appending for ErrorProne-->
                                -Xplugin:ErrorProne
                                -XepOpt:NullAway:AnnotatedPackages=de.fhdw.vendix
                                -XepOpt:NullAway:ExcludedClassAnnotations=jakarta.persistence.Entity,jakarta.persistence.MappedSuperclass
                                -XepOpt:NullAway:TreatGeneratedAsUnannotated=true
                                -XepDisableWarningsInGeneratedCode
                                -Xep:NullAway:ERROR
                                -Xep:StaticImport:OFF
                            </arg>
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <!-- Source: https://mvnrepository.com/artifact/com.google.errorprone/error_prone_core -->
                            <path>
                                <groupId>com.google.errorprone</groupId>
                                <artifactId>error_prone_core</artifactId>
                                <version>${error-prone.version}</version>
                            </path>
                            <!-- Source: https://mvnrepository.com/artifact/tech.picnic.error-prone-support/error-prone-contrib -->
                            <path>
                                <groupId>tech.picnic.error-prone-support</groupId>
                                <artifactId>error-prone-contrib</artifactId>
                                <version>${error-prone-support.version}</version>
                            </path>
                            <!-- Source: https://mvnrepository.com/artifact/com.uber.nullaway/nullaway -->
                            <path>
                                <groupId>com.uber.nullaway</groupId>
                                <artifactId>nullaway</artifactId>
                                <version>${nullaway.version}</version>
                            </path>
                            <!-- Source: https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor -->
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>